Fixed z-index of search and made small adjustments to home bar

--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -35,6 +35,7 @@ body{
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 10000;
     .input-group-addon {
       border-radius: 0px;
     }
@@ -44,7 +45,6 @@ body{
       padding: 20px;
       border: none;
       border-radius: 0px;
-      z-index: 10000;
       &:focus {
         outline-width: 0px;
         font-size: 26px;
@@ -76,7 +76,7 @@ body{
     top: 0;
     left: 0;
     width: 100%;
-    padding-left: 20px;
+    padding-left: 8px;
     height: 40px;
     border: none;
     border-radius: 0px;
